--- a/patterns/98-scrape-00-html-scraper/98-scrape-00-html-scraper.markup-only.html
+++ b/patterns/98-scrape-00-html-scraper/98-scrape-00-html-scraper.markup-only.html
@@ -14,6 +14,7 @@
     <div class="cf" style="padding-top: 10px;">
       <input name="url-form" type="submit" value="Submit" style="float: left;">
       <button id="help-button" style="float: right;">Help</button>
+      <button id="hide-button" style="float: right;display: none;">Hide</button>
     </div>
   </form>
   <script src="../../scripts/pattern/html-scraper-dhtml.js"></script>
