test fixture update

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -10,9 +10,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="node_modules/fepper-ui/styles/ui.css" media="all">
-<link rel="stylesheet" href="node_modules/fepper-ui/styles/prism-typeahead.css" media="all">
-<link rel="stylesheet" href="_styles/pattern-scaffolding.css" media="all">
+<link rel="stylesheet" href="test/fixtures/styles/ui.css" media="all">
+<link rel="stylesheet" href="test/fixtures/styles/prism-typeahead.css" media="all">
+<link rel="stylesheet" href="test/fixtures/styles/pattern-scaffolding.css" media="all">
 
 <script>window.FEPPER_UI = {};</script>
 
@@ -26,8 +26,8 @@
 <script src="node_modules/typeahead.js/dist/typeahead.bundle.min.js"></script>
 <script src="node_modules/universal-cookie/umd/universalCookie.min.js"></script>
 <script src="node_modules/wolfy87-eventemitter/EventEmitter.min.js"></script>
-<script src="_scripts/src/variables.styl" type="text/javascript"></script>
-<script src="_scripts/src/fepper-obj.js"></script>
+<script src="test/fixtures/_scripts/src/variables.styl" type="text/javascript"></script>
+<script src="test/fixtures/_scripts/src/fepper-obj.js"></script>
 </head><body id="patternlab-body"><header class="sg-header" role="banner"><div class="sg-nav-container" id="sg-nav-container"><a href="#" class="sg-nav-toggle">Menu</a><div class="visually-hidden" id="sg-nav-message">
 <h1>Nothing here yet!</h1>
 <ul>
@@ -155,7 +155,7 @@
   </div>
 </div>
 </div></aside><footer id="patternlab-foot">
-<script src="node_modules/fepper-ui/scripts/index.js" type="module"></script>
+<script src="test/fixtures/index.js" type="module"></script>
 
-<script src="_scripts/ui-extender.js"></script>
+<script src="test/fixtures/_scripts/ui-extender.js"></script>
 </footer></body></html>
