--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -10,9 +10,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="test/fixtures/styles/ui.css" media="all">
-<link rel="stylesheet" href="test/fixtures/styles/prism-typeahead.css" media="all">
-<link rel="stylesheet" href="test/fixtures/styles/pattern-scaffolding.css" media="all">
+<link rel="stylesheet" href="test/fixtures/styles/ui.css">
+<link rel="stylesheet" href="test/fixtures/styles/prism-typeahead.css">
+<link rel="stylesheet" href="test/fixtures/styles/pattern-scaffolding.css">
 
 <script>window.FEPPER_UI = {};</script>
 
