--- a/patterns/00-elements/index.html
+++ b/patterns/00-elements/index.html
@@ -14,7 +14,7 @@
   <meta http-equiv="pragma" content="no-cache">
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
-<link rel="stylesheet" href="../../test/fixtures/styles/pattern.css" media="all">
+<link rel="stylesheet" href="../../test/fixtures/styles/pattern.css">
 <script src="../../node_modules/mousetrap/mousetrap.min.js"></script>
 <script src="../../test/fixtures/annotations/annotations.js"></script>
 <!-- End Pattern Lab -->
@@ -23,7 +23,7 @@
 </head>
 <body class="">
 <!-- View All -->
-<link rel="stylesheet" href="../../test/fixtures/styles/pattern-scaffolding.css" media="all">
+<link rel="stylesheet" href="../../test/fixtures/styles/pattern-scaffolding.css">
 <div class="sg-main" role="main">
   
   <!-- Patterns -->
