passing lint and unit tests

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -129,25 +129,26 @@
 <div id="sg-code-close" class="sg-view-close">
   <a href="#" id="sg-code-close-btn" class="sg-view-close-btn">&#x2715;</a>
 </div>
-<div id="sg-code-pattern-state" style="display: none;">
+<div id="sg-code-pattern-info">
   <p>
-    The state of <span id="sg-code-pattern-state-pattern-name" class="sg-code-pattern-name"></span>: <span id="sg-code-pattern-state-fill"></span>
+    <span id="sg-code-pattern-info-pattern-name" class="sg-code-pattern-name"></span> at <code id="sg-code-pattern-info-rel-path"></code> &nbsp; <span id="sg-code-pattern-info-state"></span>
   </p>
 </div>
 <div id="sg-code-lineage" style="display: none;">
   <p>
-    <span id="sg-code-lineage-pattern-name" class="sg-code-pattern-name"></span> includes the following patterns: <span id="sg-code-lineage-fill"></span>
+    includes: <span id="sg-code-lineage-fill"></span>
   </p>
 </div>
 <div id="sg-code-lineager" style="display: none;">
   <p>
-    <span id="sg-code-lineager-pattern-name" class="sg-code-pattern-name"></span> is included by the following patterns: <span id="sg-code-lineager-fill"></span>
+    included by: <span id="sg-code-lineager-fill"></span>
   </p>
 </div>
 <div id="sg-code-markup">
   <ul id="sg-code-tabs">
     <li id="sg-code-title-html" class="sg-code-title">HTML</li>
     <li id="sg-code-title-mustache" class="sg-code-title sg-code-title-active">Mustache</li>
+    <li><button id="sg-code-copy-path" class="sg-code-button" data-copied-msg="Copied!">Copy path</button></li>
   </ul>
   <div class="sg-language-markup-container">
     <pre><code id="sg-code-fill" class="language-markup"></code></pre>
