added some dock-right button functionality

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -180,7 +180,7 @@
   <line x1="36" y1="0" x2="36" y2="72" stroke-width="8" />
   <rect x="36" y="0" width="30" height="66" opacity="50%" />
 </svg>
-<svg id="sg-view-close-btn" class="sg-view-close-btn sg-view-btn"
+<svg id="sg-view-btn-close" class="sg-view-btn-close sg-view-btn"
   xmlns="http://www.w3.org/2000/svg"
   width="72"
   height="72"
