--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -27,7 +27,7 @@
 <script src="node_modules/universal-cookie/umd/universalCookie.min.js"></script>
 <script src="node_modules/wolfy87-eventemitter/EventEmitter.min.js"></script>
 <script src="test/fixtures/_scripts/src/variables.styl" type="text/javascript"></script>
-</head><body id="patternlab-body"><header class="sg-header" role="banner"><div class="sg-nav-container" id="sg-nav-container"><a href="#" class="sg-nav-toggle">Menu</a><div class="visually-hidden" id="sg-nav-message">
+</head><body class="dock-bottom" id="patternlab-body"><header class="sg-header" role="banner"><div class="sg-nav-container" id="sg-nav-container"><a href="#" class="sg-nav-toggle">Menu</a><div class="visually-hidden" id="sg-nav-message">
 <h1>Nothing here yet!</h1>
 <ul>
   <li>Make sure there are patterns in source/_patterns</li>
@@ -114,7 +114,7 @@
     <div id="sg-rightpull"></div>
   </div>
 </div>
-</main><aside class="sg-view-container dock-bottom" id="sg-view-container"><div class="sg-view-scroll-container" id="sg-annotations-container">
+</main><aside class="sg-view-container" id="sg-view-container"><div class="sg-view-scroll-container" id="sg-annotations-container">
   <div id="sg-annotations">
     <div class="sg-annotation">
       <h2>No Annotations</h2>
@@ -125,7 +125,7 @@
 </div><div class="sg-view-scroll-container" id="sg-code-container">
   <div id="sg-code-pattern-info">
     <p>
-      <span id="sg-code-pattern-info-pattern-name" class="sg-code-pattern-name"></span> at <code id="sg-code-pattern-info-rel-path"></code> &nbsp; <span id="sg-code-pattern-info-state"></span>
+      <span id="sg-code-pattern-info-pattern-name" class="sg-code-pattern-name"></span> <code id="sg-code-pattern-info-rel-path"></code> &nbsp; <span id="sg-code-pattern-info-state"></span>
     </p>
   </div>
   <div id="sg-code-lineage" style="display: none;">
@@ -150,7 +150,7 @@
   </div>
 </div>
 </div><div class="sg-view-btns">
-<svg id="sg-view-dock-left-btn" class="sg-view-dock-left-btn sg-view-btn"
+<svg id="sg-view-btn-dock-left" class="sg-view-btn-dock-left sg-view-btn"
   xmlns="http://www.w3.org/2000/svg"
   width="72"
   height="72"
@@ -160,7 +160,7 @@
   <rect x="6" y="0" width="30" height="66" opacity="50%" />
   <line x1="36" y1="0" x2="36" y2="72" stroke-width="8" />
 </svg>
-<svg id="sg-view-dock-bottom-btn" class="sg-view-dock-bottom-btn sg-view-btn"
+<svg id="sg-view-btn-dock-bottom" class="sg-view-btn-dock-bottom sg-view-btn"
   xmlns="http://www.w3.org/2000/svg"
   width="72"
   height="72"
@@ -170,7 +170,7 @@
   <rect x="0" y="32" width="72" height="8" />
   <rect x="2" y="36" width="68" height="28" opacity="50%" />
 </svg>
-<svg id="sg-view-dock-right-btn" class="sg-view-dock-right-btn sg-view-btn"
+<svg id="sg-view-btn-dock-right" class="sg-view-btn-dock-right sg-view-btn"
   xmlns="http://www.w3.org/2000/svg"
   width="72"
   height="72"
