test fixture updates

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -106,13 +106,11 @@
     {{^ ishControlsHide.tools-shortcuts }}<li><a href="/readme#keyboard-shortcuts" class="sg-tool sg-checklist-icon sg-icon sg-icon-keyboard" target="_blank">Keyboard shortcuts</a></li>{{/ ishControlsHide.tools-shortcuts }}
   </ul>
 {{/ ishControlsHide.tools-all }}
-</li></ul></header><main>
-<div id="sg-vp-wrap" class="anim-ready">
-  <div id="sg-gen-container">
-    <iframe id="sg-viewport" name="sg-viewport" sandbox="allow-same-origin allow-scripts allow-popups allow-forms"></iframe>
-    <div id="sg-cover"></div>
-    <div id="sg-rightpull"></div>
-  </div>
+</li></ul></header><main class="anim-ready" id="sg-vp-wrap">
+<div id="sg-gen-container">
+  <iframe id="sg-viewport" name="sg-viewport" sandbox="allow-same-origin allow-scripts allow-popups allow-forms"></iframe>
+  <div id="sg-cover"></div>
+  <div id="sg-rightpull"></div>
 </div>
 </main><aside class="sg-view-container" id="sg-view-container"><div class="sg-view-scroll-container" id="sg-annotations-container">
   <div id="sg-annotations">
@@ -156,7 +154,7 @@
   height="72"
   viewBox="0 0 72 72"
 >
-  <rect x="4" y="-8" width="64" height="76" rx="8" ry="8" fill="transparent" stroke-width="8" />
+  <rect x="4" y="-8" width="64" height="76" rx="4" ry="4" fill="transparent" stroke-width="8" />
   <rect x="6" y="0" width="30" height="66" opacity="50%" />
   <line x1="36" y1="0" x2="36" y2="72" stroke-width="8" />
 </svg>
@@ -166,7 +164,7 @@
   height="72"
   viewBox="0 0 72 72"
 >
-  <rect x="4" y="-8" width="64" height="76" rx="8" ry="8" fill="transparent" stroke-width="8" />
+  <rect x="4" y="-8" width="64" height="76" rx="4" ry="4" fill="transparent" stroke-width="8" />
   <rect x="0" y="32" width="72" height="8" />
   <rect x="2" y="36" width="68" height="28" opacity="50%" />
 </svg>
@@ -176,7 +174,7 @@
   height="72"
   viewBox="0 0 72 72"
 >
-  <rect x="4" y="-8" width="64" height="76" rx="8" ry="8" fill="transparent" stroke-width="8" />
+  <rect x="4" y="-8" width="64" height="76" rx="4" ry="4" fill="transparent" stroke-width="8" />
   <line x1="36" y1="0" x2="36" y2="72" stroke-width="8" />
   <rect x="36" y="0" width="30" height="66" opacity="50%" />
 </svg>
