--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -122,7 +122,9 @@
 </div><div class="sg-view-scroll-container" id="sg-code-container">
   <div id="sg-code-pattern-info">
     <p>
-      <span id="sg-code-pattern-info-pattern-name" class="sg-code-pattern-name"></span> <code id="sg-code-pattern-info-rel-path"></code> &nbsp; <span id="sg-code-pattern-info-state"></span>
+      <span id="sg-code-pattern-info-pattern-name" class="sg-code-pattern-name"></span>
+      <code id="sg-code-pattern-info-rel-path" title="Click to copy path"></code> &nbsp;
+      <span id="sg-code-pattern-info-state"></span>
     </p>
   </div>
   <div id="sg-code-lineage" style="display: none;">
@@ -135,15 +137,17 @@
       included by: <span id="sg-code-lineager-fill"></span>
     </p>
   </div>
-  <div id="sg-code-markup">
-    <ul id="sg-code-tabs">
-      <li id="sg-code-title-html" class="sg-code-title">HTML</li>
-      <li id="sg-code-title-mustache" class="sg-code-title sg-code-title-active">Mustache</li>
-      <li><button id="sg-code-copy-path" class="sg-code-button" data-copied-msg="Copied!">Copy path</button></li>
-    </ul>
-    <div class="sg-language-markup-container">
-      <pre><code id="sg-code-fill" class="language-markup"></code></pre>
-    </div>
+  <ul id="sg-code-tabs">
+    <li id="sg-code-tab-feplet" class="sg-code-tab sg-code-tab-active" title="Browse Fepper's Mustache templates">Feplet</li>
+    <li id="sg-code-tab-markdown" class="sg-code-tab" title="Edit this pattern's Markdown content">Markdown</li>
+    <li id="sg-code-tab-requerio" class="sg-code-tab" title="Time-travel through Fepper's application states">Requerio</li>
+    <li id="sg-code-tab-git" class="sg-code-tab" title="Download and upload revisions to this project">Git</li>
+  </ul>
+  <div id="sg-code-panels">
+    <iframe id="sg-code-panel-feplet" class="sg-code-panel sg-code-panel-active" sandbox="allow-same-origin allow-scripts allow-top-navigation"></iframe>
+    <div id="sg-code-panel-markdown" class="sg-code-panel"></div>
+    <div id="sg-code-panel-requerio" class="sg-code-panel"></div>
+    <div id="sg-code-panel-git" class="sg-code-panel"></div>
   </div>
 </div>
 </div><div class="sg-view-btns">
