passing lint and unit tests

--- a/patterns/01-compounds-block/01-compounds-block.html
+++ b/patterns/01-compounds-block/01-compounds-block.html
@@ -24,6 +24,7 @@
 <body class="">
 <a href="../04-pages-00-homepage/04-pages-00-homepage.html">Home</a>
 <p>Fepper Base</p>
+<p>&copy; MIT License</p>
 
 <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
