--- a/patterns/04-pages-00-homepage/04-pages-00-homepage.markup-only.html
+++ b/patterns/04-pages-00-homepage/04-pages-00-homepage.markup-only.html
@@ -1,2 +1,1 @@
-<a href="../04-pages-00-homepage/04-pages-00-homepage.html">Home</a>
-<p>Fepper Base</p>
+<a href="../../patterns/02-components-region/02-components-region.html">Component</a>  <p>Fepper Base</p>  
