--- a/patterns/98-scrape-00-html-scraper/98-scrape-00-html-scraper.markup-only.html
+++ b/patterns/98-scrape-00-html-scraper/98-scrape-00-html-scraper.markup-only.html
@@ -1,1 +1,1 @@
-<script src="../../node_modules/fepper-ui/scripts/pattern/html-scraper.js" type="module"></script> 
+<script src="../../node_modules/fepper-ui/scripts/pattern/html-scraper-ajax.js"></script>
