--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -10,9 +10,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="test/fixtures/styles/ui.css">
-<link rel="stylesheet" href="test/fixtures/styles/prism-typeahead.css">
-<link rel="stylesheet" href="test/fixtures/styles/pattern-scaffolding.css">
+<link rel="stylesheet" href="node_modules/fepper-ui/styles/prism-twilight.css">
+<link rel="stylesheet" href="node_modules/fepper-ui/styles/ui.css">
+<link rel="stylesheet" href="_styles/pattern-scaffolding.css">
 
 <script>window.FEPPER_UI = {};</script>
 
@@ -25,7 +25,7 @@
 <script src="node_modules/typeahead.js/dist/typeahead.bundle.min.js"></script>
 <script src="node_modules/universal-cookie/umd/universalCookie.min.js"></script>
 <script src="node_modules/wolfy87-eventemitter/EventEmitter.min.js"></script>
-<script src="test/fixtures/_scripts/src/variables.styl" type="text/javascript"></script>
+<script src="_scripts/src/variables.styl" type="text/javascript"></script>
 </head><body class="dock-bottom" id="patternlab-body"><header class="sg-header" role="banner"><div class="sg-nav-container" id="sg-nav-container"><a href="#" class="sg-nav-toggle">Menu</a><div class="visually-hidden" id="sg-nav-message">
 <h1>Nothing here yet!</h1>
 <ul>
@@ -107,7 +107,7 @@
 {{/ ishControlsHide.tools-all }}
 </li></ul></header><main class="anim-ready" id="sg-vp-wrap">
 <div id="sg-gen-container">
-  <iframe id="sg-viewport" name="sg-viewport" sandbox="allow-same-origin allow-scripts allow-popups allow-forms"></iframe>
+  <iframe id="sg-viewport" sandbox="allow-same-origin allow-scripts allow-popups allow-forms"></iframe>
   <div id="sg-cover"></div>
   <div id="sg-rightpull"></div>
 </div>
@@ -191,7 +191,7 @@
   <line x1="69" y1="3" x2="3" y2="69" stroke-width="8" />
 </svg>
 </div></aside><footer id="patternlab-foot">
-<script src="test/fixtures/index.js" type="module"></script>
+<script src="node_modules/fepper-ui/scripts/index.js" type="module"></script>
 
-<script src="test/fixtures/_scripts/ui-extender.js"></script>
+<script src="_scripts/ui-extender.js"></script>
 </footer></body></html>
