renamed and simplified styles

--- a/patterns/00-elements/index.html
+++ b/patterns/00-elements/index.html
@@ -68,7 +68,7 @@
             >&#x276E;&#x276F;</a>
           </div>
         </div>
-        <div class="sg-pattern-example cf"></div>
+        <div class="sg-pattern-example"></div>
         <script type="text/json" id="sg-pattern-data-elements-paragraph" class="sg-pattern-data">
           {"lineage":[],"lineageExists":false,"lineageR":[{"lineagePattern":"compounds-block","lineagePath":"patterns/01-compounds-block/01-compounds-block.html","isHidden":false}],"lineageRExists":true,"patternDesc":"","patternExtension":".mustache","patternName":"Paragraph","patternPartial":"elements-paragraph","patternState":"","portReloader":35730,"portServer":3001}
         </script>
