--- a/patterns/01-compounds/index.html
+++ b/patterns/01-compounds/index.html
@@ -68,7 +68,7 @@
             >&#x276E;&#x276F;</a>
           </div>
         </div>
-        <div class="sg-pattern-example cf"></div>
+        <div class="sg-pattern-example"></div>
         <script type="text/json" id="sg-pattern-data-compounds-block" class="sg-pattern-data">
           {"lineage":[{"lineagePattern":"elements-paragraph","lineagePath":"patterns/00-elements-paragraph/00-elements-paragraph.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"components-region","lineagePath":"patterns/02-components-region/02-components-region.html","isHidden":false}],"lineageRExists":true,"patternDesc":"","patternExtension":".mustache","patternName":"Block","patternPartial":"compounds-block","patternState":"","portReloader":35730,"portServer":3001}
         </script>
