--- a/patterns/viewall/viewall.html
+++ b/patterns/viewall/viewall.html
@@ -68,7 +68,7 @@
             >&#x276E;&#x276F;</a>
           </div>
         </div>
-        <div class="sg-pattern-example cf"></div>
+        <div class="sg-pattern-example"></div>
         <script type="text/json" id="sg-pattern-data-elements-paragraph" class="sg-pattern-data">
           {"lineage":[],"lineageExists":false,"lineageR":[{"lineagePattern":"compounds-block","lineagePath":"patterns/01-compounds-block/01-compounds-block.html","isHidden":false}],"lineageRExists":true,"patternDesc":"","patternExtension":".mustache","patternName":"Paragraph","patternPartial":"elements-paragraph","patternState":"","portReloader":35730,"portServer":3001}
         </script>
@@ -111,7 +111,7 @@
             >&#x276E;&#x276F;</a>
           </div>
         </div>
-        <div class="sg-pattern-example cf"></div>
+        <div class="sg-pattern-example"></div>
         <script type="text/json" id="sg-pattern-data-compounds-block" class="sg-pattern-data">
           {"lineage":[{"lineagePattern":"elements-paragraph","lineagePath":"patterns/00-elements-paragraph/00-elements-paragraph.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"components-region","lineagePath":"patterns/02-components-region/02-components-region.html","isHidden":false}],"lineageRExists":true,"patternDesc":"","patternExtension":".mustache","patternName":"Block","patternPartial":"compounds-block","patternState":"","portReloader":35730,"portServer":3001}
         </script>
@@ -154,7 +154,7 @@
             >&#x276E;&#x276F;</a>
           </div>
         </div>
-        <div class="sg-pattern-example cf"></div>
+        <div class="sg-pattern-example"></div>
         <script type="text/json" id="sg-pattern-data-components-region" class="sg-pattern-data">
           {"lineage":[{"lineagePattern":"compounds-block","lineagePath":"patterns/01-compounds-block/01-compounds-block.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"templates-page","lineagePath":"patterns/03-templates-page/03-templates-page.html","isHidden":false}],"lineageRExists":true,"patternDesc":"","patternExtension":".mustache","patternName":"Region","patternPartial":"components-region","patternState":"","portReloader":35730,"portServer":3001}
         </script>
@@ -197,7 +197,7 @@
             >&#x276E;&#x276F;</a>
           </div>
         </div>
-        <div class="sg-pattern-example cf"></div>
+        <div class="sg-pattern-example"></div>
         <script type="text/json" id="sg-pattern-data-templates-page" class="sg-pattern-data">
           {"lineage":[{"lineagePattern":"components-region","lineagePath":"patterns/02-components-region/02-components-region.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"pages-homepage","lineagePath":"patterns/04-pages-00-homepage/04-pages-00-homepage.html","isHidden":false}],"lineageRExists":true,"patternDesc":"","patternExtension":".mustache","patternName":"Page","patternPartial":"templates-page","patternState":"","portReloader":35730,"portServer":3001}
         </script>
@@ -240,7 +240,7 @@
             >&#x276E;&#x276F;</a>
           </div>
         </div>
-        <div class="sg-pattern-example cf"></div>
+        <div class="sg-pattern-example"></div>
         <script type="text/json" id="sg-pattern-data-pages-homepage" class="sg-pattern-data">
           {"lineage":[{"lineagePattern":"templates-page","lineagePath":"patterns/03-templates-page/03-templates-page.html","isHidden":false}],"lineageExists":true,"lineageR":[],"lineageRExists":false,"patternDesc":"","patternExtension":".mustache","patternName":"Homepage","patternPartial":"pages-homepage","patternState":"","portReloader":35730,"portServer":3001}
         </script>
