passing unit tests

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -151,10 +151,11 @@
         <p>Please refer to <a href="/readme#markdown-content" target="_blank">the docs</a> for additional information.</p>
       </div>
       <div id="sg-code-pane-markdown" class="sg-code-outcome">
-        <pre><code id="sg-code-language-markdown" class="language-markdown"></code></pre>
+        <pre id="sg-code-pre-language-markdown"><code id="sg-code-code-language-markdown" class="language-markdown"></code></pre>
         <button id="sg-code-btn-markdown-edit" class="sg-code-btn" title="Edit this pattern's Markdown content">Edit</button>
       </div>
       <div id="sg-code-pane-markdown-edit" class="sg-code-outcome">
+        <textarea id="sg-code-textarea-markdown" class="language-markdown" name="edit_markdown"></textarea>
         <button id="sg-code-btn-markdown-save" class="sg-code-btn" title="Save Markdown content">Save</button>
       </div>
     </div>
