--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -155,7 +155,7 @@
         <button id="sg-code-btn-markdown-edit" class="sg-code-btn" title="Edit this pattern's Markdown content">Edit</button>
       </div>
       <div id="sg-code-pane-markdown-edit" class="sg-code-outcome">
-        <textarea id="sg-code-textarea-markdown" class="language-markdown" name="edit_markdown"></textarea>
+        <textarea id="sg-code-textarea-markdown" class="language-markdown" name="markdown_edited"></textarea>
         <button id="sg-code-btn-markdown-save" class="sg-code-btn" title="Save Markdown content">Save</button>
       </div>
     </div>
