--- a/patterns/02-components/index.html
+++ b/patterns/02-components/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="sg-pattern-example"></div>
         <script type="text/json" id="sg-pattern-data-components-region" class="sg-pattern-data">
-          {"lineage":[{"lineagePattern":"compounds-block","lineagePath":"patterns/01-compounds-block/01-compounds-block.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"templates-page","lineagePath":"patterns/03-templates-page/03-templates-page.html","isHidden":false}],"lineageRExists":true,"patternDesc":"","patternExtension":".mustache","patternName":"Region","patternPartial":"components-region","patternState":"","portReloader":35730,"portServer":3001}
+          {"lineage":[{"lineagePattern":"compounds-block","lineagePath":"patterns/01-compounds-block/01-compounds-block.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"templates-page","lineagePath":"patterns/03-templates-page/03-templates-page.html","isHidden":false}],"lineageRExists":true,"missingPartials":[],"patternDesc":"","patternExtension":".mustache","patternName":"Region","patternPartial":"components-region","patternState":"","portReloader":35730,"portServer":3001}
         </script>
       </div><!--end .sg-pattern-->
     
