--- a/patterns/03-templates/index.html
+++ b/patterns/03-templates/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="sg-pattern-example"></div>
         <script type="text/json" id="sg-pattern-data-templates-page" class="sg-pattern-data">
-          {"lineage":[{"lineagePattern":"components-region","lineagePath":"patterns/02-components-region/02-components-region.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"pages-homepage","lineagePath":"patterns/04-pages-00-homepage/04-pages-00-homepage.html","isHidden":false}],"lineageRExists":true,"patternDesc":"","patternExtension":".mustache","patternName":"Page","patternPartial":"templates-page","patternState":"","portReloader":35730,"portServer":3001}
+          {"lineage":[{"lineagePattern":"components-region","lineagePath":"patterns/02-components-region/02-components-region.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"pages-homepage","lineagePath":"patterns/04-pages-00-homepage/04-pages-00-homepage.html","isHidden":false}],"lineageRExists":true,"missingPartials":[],"patternDesc":"","patternExtension":".mustache","patternName":"Page","patternPartial":"templates-page","patternState":"","portReloader":35730,"portServer":3001}
         </script>
       </div><!--end .sg-pattern-->
     
