--- a/patterns/04-pages-00-homepage/04-pages-00-homepage.html
+++ b/patterns/04-pages-00-homepage/04-pages-00-homepage.html
@@ -27,7 +27,7 @@
 <a href="../../patterns/02-components-region/02-components-region.html">Component</a>  <p>Fepper Base</p>  
 <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
-  {"lineage":[{"lineagePattern":"templates-page","lineagePath":"patterns/03-templates-page/03-templates-page.html","isHidden":false}],"lineageExists":true,"lineageR":[],"lineageRExists":false,"patternDesc":"","patternExtension":".mustache","patternName":"Homepage","patternPartial":"pages-homepage","patternState":"","portReloader":35730,"portServer":3001}
+  {"lineage":[{"lineagePattern":"templates-page","lineagePath":"patterns/03-templates-page/03-templates-page.html","isHidden":false}],"lineageExists":true,"lineageR":[],"lineageRExists":false,"missingPartials":[],"patternDesc":"","patternExtension":".mustache","patternName":"Homepage","patternPartial":"pages-homepage","patternState":"","portReloader":35730,"portServer":3001}
 </script>
 
 <script>
