--- a/patterns/04-pages/index.html
+++ b/patterns/04-pages/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="sg-pattern-example"></div>
         <script type="text/json" id="sg-pattern-data-pages-homepage" class="sg-pattern-data">
-          {"lineage":[{"lineagePattern":"templates-page","lineagePath":"patterns/03-templates-page/03-templates-page.html","isHidden":false}],"lineageExists":true,"lineageR":[],"lineageRExists":false,"patternDesc":"","patternExtension":".mustache","patternName":"Homepage","patternPartial":"pages-homepage","patternState":"","portReloader":35730,"portServer":3001}
+          {"lineage":[{"lineagePattern":"templates-page","lineagePath":"patterns/03-templates-page/03-templates-page.html","isHidden":false}],"lineageExists":true,"lineageR":[],"lineageRExists":false,"missingPartials":[],"patternDesc":"","patternExtension":".mustache","patternName":"Homepage","patternPartial":"pages-homepage","patternState":"","portReloader":35730,"portServer":3001}
         </script>
       </div><!--end .sg-pattern-->
     
