--- a/patterns/98-scrape-00-html-scraper/98-scrape-00-html-scraper.html
+++ b/patterns/98-scrape-00-html-scraper/98-scrape-00-html-scraper.html
@@ -28,7 +28,7 @@
 
 <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
-  {"lineage":[],"lineageExists":false,"lineageR":[],"lineageRExists":false,"patternDesc":"","patternExtension":".mustache","patternName":"Html Scraper","patternPartial":"scrape-html-scraper","patternState":"","portReloader":35730,"portServer":3001}
+  {"lineage":[],"lineageExists":false,"lineageR":[],"lineageRExists":false,"missingPartials":[],"patternDesc":"","patternExtension":".mustache","patternName":"Html Scraper","patternPartial":"scrape-html-scraper","patternState":"","portReloader":35730,"portServer":3001}
 </script>
 
 <script>
