--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -137,6 +137,11 @@
       included by: <span id="sg-code-lineager-fill"></span>
     </p>
   </div>
+  <div id="sg-code-missing-partials" style="display: none;">
+    <p>
+      missing: <span id="sg-code-missing-partials-fill"></span>
+    </p>
+  </div>
   <ul id="sg-code-tabs">
     <li id="sg-code-tab-feplet" class="sg-code-tab sg-code-tab-active" title="Browse Fepper's Mustache templates">Feplet</li>
     <li id="sg-code-tab-markdown" class="sg-code-tab" title="Edit this pattern's Markdown content">Markdown</li>
