--- a/patterns/02-components-region/02-components-region.html
+++ b/patterns/02-components-region/02-components-region.html
@@ -27,7 +27,7 @@
 <p>Fepper Base</p>  
 <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
-  {"lineage":[{"lineagePattern":"compounds-block","lineagePath":"patterns/01-compounds-block/01-compounds-block.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"templates-page","lineagePath":"patterns/03-templates-page/03-templates-page.html","isHidden":false}],"lineageRExists":true,"patternDesc":"","patternExtension":".mustache","patternName":"Region","patternPartial":"components-region","patternState":"","portReloader":35730,"portServer":3001}
+  {"lineage":[{"lineagePattern":"compounds-block","lineagePath":"patterns/01-compounds-block/01-compounds-block.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"templates-page","lineagePath":"patterns/03-templates-page/03-templates-page.html","isHidden":false}],"lineageRExists":true,"missingPartials":[],"patternDesc":"","patternExtension":".mustache","patternName":"Region","patternPartial":"components-region","patternState":"","portReloader":35730,"portServer":3001}
 </script>
 
 <script>
