--- a/patterns/viewall/viewall.html
+++ b/patterns/viewall/viewall.html
@@ -113,7 +113,7 @@
         </div>
         <div class="sg-pattern-example"></div>
         <script type="text/json" id="sg-pattern-data-compounds-block" class="sg-pattern-data">
-          {"lineage":[{"lineagePattern":"elements-paragraph","lineagePath":"patterns/00-elements-paragraph/00-elements-paragraph.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"components-region","lineagePath":"patterns/02-components-region/02-components-region.html","isHidden":false}],"lineageRExists":true,"patternDesc":"","patternExtension":".mustache","patternName":"Block","patternPartial":"compounds-block","patternState":"","portReloader":35730,"portServer":3001}
+          {"lineage":[{"lineagePattern":"elements-paragraph","lineagePath":"patterns/00-elements-paragraph/00-elements-paragraph.html","isHidden":false}],"lineageExists":true,"lineageR":[{"lineagePattern":"components-region","lineagePath":"patterns/02-components-region/02-components-region.html","isHidden":false}],"lineageRExists":true,"missingPartials":["organisms-molecules","molecules-atoms"],"patternDesc":"","patternExtension":".mustache","patternName":"Block","patternPartial":"compounds-block","patternState":"","portReloader":35730,"portServer":3001}
         </script>
       </div><!--end .sg-pattern-->
     
